Fix CSS for header nav links.

--- a/src/cadorsfeed/templates/base.html
+++ b/src/cadorsfeed/templates/base.html
@@ -28,6 +28,15 @@ div#nav a {
     color: #FF1721;
 }
 
+div#nav a.border {
+    margin-right: 0px;
+    padding-right: 4px;
+}
+
+div#nav a.border:not(:first-child) {
+    padding-left: 5px;
+}
+
 div#nav a:hover {
     background: #FF1721;
     color: white;
