--- a/src/cadorsfeed/templates/base.html
+++ b/src/cadorsfeed/templates/base.html
@@ -8,49 +8,11 @@
 <!--[if lt IE 8]>
 <link rel="stylesheet" href="/static/css/blueprint/ie.css" type="text/css" media="screen, projection">
 <![endif]-->
+<link rel="stylesheet" href="/static/css/site.css" type="text/css">
 <script src="/static/js/modernizr-1.7.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script src="http://cdn.jquerytools.org/1.2.5/all/jquery.tools.min.js"></script>
-<style type="text/css">
-
-div#nav {
-    line-height: 4em;
-    font-size: 1.5em;
-    text-align:center;
-    height:4em;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    margin-bottom: 2em;
-}
-
-div#nav a {
-    vertical-align: middle;
-    color: #FF1721;
-}
-
-div#nav a.border {
-    margin-right: 0px;
-    padding-right: 4px;
-}
-
-div#nav a.border:not(:first-child) {
-    padding-left: 5px;
-}
-
-div#nav a:hover {
-    background: #FF1721;
-    color: white;
-}
-
-header div p.title {
-    color: #FF1721;
-    font-size: 3em;
-    line-height: 1;
-    margin-bottom: 0.5em;
-}
-</style>
 {% endblock %}
-
 </head>
 
 <body>
@@ -58,7 +20,7 @@ header div p.title {
   <header class="span-24">
   
   <div class="prepend-20 span-4 last">
-    <p class="title" title="Civil Aviation Daily Occurrence Reporting System">CADORS</p>
+    <p class="title center" title="Civil Aviation Daily Occurrence Reporting System">CADORS</p>
   </div>
   <div id="nav" class="clear">
       <a class="span-4 border" href="/">Home</a>
