Make report list views uniform.

--- a/src/cadorsfeed/templates/sr_loc.html
+++ b/src/cadorsfeed/templates/sr_loc.html
@@ -19,12 +19,14 @@
   <tr>
     <td><a href="{{ url_for('report.display_report',
 		 report=report.cadors_number) }}">{{report.cadors_number}}</a></td>
-    <td>{{ report.timestamp.strftime("%Y&#8209;%m&#8209;%d %H%M&nbsp;Z") | safe }}</td>
+    <td>{{report.timestamp_html|safe}}</td>
     <td>{{location_name}}</td>
     <td>{{(distance/1000)|round(2)}}&nbsp;km&nbsp;<span title="{{azimuth | round(2)}}&deg;">{{get_direction(azimuth)}}</span></td>
     <td>{{report.occurrence_type}}</td>
     <td>{{report.narrative_parts[0].narrative_text | truncate(length=150)}}</td>
   </tr>
+  {% else %}
+  <tr><td colspan="6" class="large center">No results</td></tr>
   {% endfor %}
   </tbody>
 </table>
