Fix typo in footer.

--- a/src/cadorsfeed/templates/base.html
+++ b/src/cadorsfeed/templates/base.html
@@ -36,7 +36,7 @@
   </section>
   <hr>
   <footer class="span-24">
-  <p><small>CADORS data is provided by Transport Canada. All reports are unveritified and subject to change. <a href="/disclaimer">View full disclaimer.</a></small></p>
+  <p><small>CADORS data is provided by Transport Canada. All reports are unverified and subject to change. <a href="/disclaimer">View full disclaimer.</a></small></p>
   </footer>
 </div>
 </body>
