--- a/src/cadorsfeed/templates/sr_loc.html
+++ b/src/cadorsfeed/templates/sr_loc.html
@@ -2,6 +2,8 @@
 {% import "pagination.html" as pg %}
 {% import "report_list.html" as r %}
 
+{% block title %}Events within {{radius}} km of {{latitude}}, {{longitude}}{% endblock %}
+
 {% block body %}
 {% if pagination.page > 1 %}
 {{ pg.render_pagination(pagination) }}
