--- a/src/cadorsfeed/static/css/site.css
+++ b/src/cadorsfeed/static/css/site.css
@@ -47,3 +47,9 @@ form div.span-4 input.text {
 input[type="search"] {
   -webkit-appearance: textfield;
 }
+
+.count {
+    font-size: 1.5em;
+    line-height: 1;
+    margin-bottom: 0.5em;
+}
