Use report.timestamp_html in report.py.

--- a/src/cadorsfeed/templates/report.html
+++ b/src/cadorsfeed/templates/report.html
@@ -19,7 +19,7 @@
 <dt>Location</dt>
 <dd>{{report.location}}</dd>
 <dt>Date</dt>
-<dd>{{report.timestamp}}</dd>
+<dd>{{report.timestamp_html|safe}}</dd>
 <dt>Type</dt>
 <dd>{{report.occurrence_type}}</dd>
 <dt>Fatalities</dt>
