Add static pages.

--- a/src/cadorsfeed/templates/base.html
+++ b/src/cadorsfeed/templates/base.html
@@ -19,8 +19,8 @@
 <div class="container">
   <header class="span-24">
   
-  <div class="prepend-20 span-4 last">
-    <p class="title center" title="Civil Aviation Daily Occurrence Reporting System">CADORS</p>
+  <div class="prepend-18 span-6 last">
+    <p class="title center" title="Civil Aviation Daily Occurrence Reporting System">cadorsfeed</p>
   </div>
   <div id="nav" class="clear">
       <a class="span-4 border" href="/">Home</a>
