Update index page.

--- a/src/cadorsfeed/templates/index.html
+++ b/src/cadorsfeed/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="span-16 append-4 prepend-4 last">
-  <p class="large">This is is <code>cadorsfeed</code>, a project to make Transport Canada's Civil Aviation Daily Occurrence Reporting System more useful by extracting metadata from unstructured text, and providing an improved HTML interface, as well as Atom and JSON feeds.</p>
-  <p>To get started, try viewing <a href="/daily-report/latest">the latest daily report</a>, or select an option from the links above.</p>
+  <p class="large">This is is <code>cadorsfeed</code>, a project to make <a href="http://www.tc.gc.ca/eng/tc-main.htm">Transport Canada</a>'s <a href="http://wwwapps.tc.gc.ca/Saf-Sec-Sur/2/cadors-screaq/">Civil Aviation Daily Occurrence Reporting System</a> more useful by extracting metadata from unstructured text, and providing an improved HTML interface, as well as <a href="http://www.atomenabled.org/developers/syndication/">Atom</a> and <a href="http://json.org/">JSON</a> feeds.</p>
+  <p>To get started, try viewing <a href="/daily-report/latest">the latest daily report</a>, or select an option from the links above. More information <a href="/about">about this site</a> is available.</p>
 </div>
 {% endblock %}
