--- a/src/cadorsfeed/templates/daily_report.html
+++ b/src/cadorsfeed/templates/daily_report.html
@@ -19,13 +19,13 @@
 {% block body %}
 <section class="clear large">
 <div class="span-4 append-16">
-{% if previous_report %}
-<a href="{{ previous_report.link(format='html')}}">&laquo;&nbsp;{{previous_report.report_date.strftime("%Y-%m-%d")}}</a>
+{% if prev %}
+<a href="{{ prev.link(format='html')}}">&laquo;&nbsp;{{prev.report_date.strftime("%Y-%m-%d")}}</a>
 {% endif %}&nbsp;
 </div>
 <div class="span-4 last" style="text-align: right;">
-{% if next_report %}
-<a href="{{ next_report.link(format='html')}}">{{ next_report.report_date.strftime("%Y-%m-%d")}}&nbsp;&raquo;</a>
+{% if next %}
+<a href="{{ next.link(format='html')}}">{{ next.report_date.strftime("%Y-%m-%d")}}&nbsp;&raquo;</a>
 {% endif %}
 </div>
 </section>
