Fix missing paragraphs in about page.

--- a/src/cadorsfeed/templates/about.html
+++ b/src/cadorsfeed/templates/about.html
@@ -23,8 +23,7 @@
 <li><code>/search/flight&operator=<em>operator</em>&flight=<em>flight</em>&page=1&format=atom</code> (if <code>flight</code> is omitted, all flights from that operator are retrieved)</li>
 </ul>
 
-Some locations associated with a report are identified as 'primary' locations; to search all locations, replace <code>primary=primary</code> with <code>primary=all</code>.
-The paginated feeds have <code>&lt;link rel="prev"&gt;</code> and <code>&lt;link rel="next"&gt;</code> elements to aid in retrieving multiple pages of results.
-
+<p>Some locations associated with a report are identified as 'primary' locations; to search all locations, replace <code>primary=primary</code> with <code>primary=all</code>.</p>
+<p>The paginated feeds have <code>&lt;link rel="prev"&gt;</code> and <code>&lt;link rel="next"&gt;</code> elements to aid in retrieving multiple pages of results.</p>
 </div>
 {% endblock %}
