Front-end updates.

--- a/src/cadorsfeed/static/css/site.css
+++ b/src/cadorsfeed/static/css/site.css
@@ -76,5 +76,5 @@ body {
 }
 
 section.content {
-    font-family: "Arvo", "Helvetica Neue", Arial, Helvetica, sans-serif;
+    font-family: "Droid Serif", "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
