--- a/src/cadorsfeed/templates/base.html
+++ b/src/cadorsfeed/templates/base.html
@@ -3,7 +3,7 @@
 <head>
 <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Lato:regular,bold' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Arvo:regular,bold' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Droid+Serif:regular,bold' rel='stylesheet' type='text/css'>
 {% block head %}
 <title>{% block title %}{% endblock %} - cadorsfeed</title>
 <link rel="stylesheet" href="/static/css/blueprint/screen.css" type="text/css" media="screen, projection">
@@ -39,7 +39,7 @@
   </section>
   <hr>
   <footer class="span-24">
-  <p><small>CADORS data is provided by Transport Canada. All reports are unverified and subject to change. <a href="/disclaimer">View full disclaimer.</a> <a href="/privacy">Privacy policy.</a><br>This is a <a href="http://www.kurtraschke.com/">Kurt Raschke</a> production.</small></p>
+  <p><small>CADORS data is provided by Transport Canada. All reports are unverified and subject to change. <a href="/disclaimer">View full disclaimer.</a> <a href="/privacy">Privacy policy.</a> This is a <a href="http://www.kurtraschke.com/">Kurt Raschke</a> production.</small></p>
   </footer>
 </div>
 </body>
