Fix next/previous links.

--- a/src/cadorsfeed/templates/daily_report.html
+++ b/src/cadorsfeed/templates/daily_report.html
@@ -8,7 +8,7 @@
 {{ super() }}
 <link rel="first" href="{{ first.link(format='html') }}">
 {%- if prev %}
-<link rel="prev" href="{{ prev.link(format='html') }}">
+<link rel="previous" href="{{ prev.link(format='html') }}">
 {% endif %}
 {%- if next -%}
 <link rel="next" href="{{ next.link(format='html') }}">
