Make date field in daily report list form required.

--- a/src/cadorsfeed/templates/daily_report_list.html
+++ b/src/cadorsfeed/templates/daily_report_list.html
@@ -30,7 +30,7 @@
 <fieldset>
 <legend>Jump to date</legend>
 <label for="date">Date</label><br>
-<input type="date" name="report_date"><br>
+<input type="date" name="report_date" required><br>
 <input type="submit">
 </fieldset>
 </form>
