--- a/src/cadorsfeed/templates/daily_report_full.html
+++ b/src/cadorsfeed/templates/daily_report_full.html
@@ -5,7 +5,7 @@
 
 {% block head %}
 {{ super() }}
-<script type="text/javascript" src="http://www.google.com/jsapi?key={{google_maps_key}}"></script>
+<script type="text/javascript" src="http://www.google.com/jsapi?key={{config['GOOGLE_MAPS_KEY']}}"></script>
 <script type="text/javascript" src="/static/js/map_overlay.js"></script>
 <link type="text/css" rel="stylesheet" media="screen" href="/static/css/map_overlay.css">
 {% endblock %}
