--- a/src/cadorsfeed/templates/daily_report_full.html
+++ b/src/cadorsfeed/templates/daily_report_full.html
@@ -22,7 +22,7 @@
 <hr>
 
 {% for report in reports %}
-<h2>Report {{report.cadors_number}}</h2>
+<h2><a href="{{report.link()}}">Report {{report.cadors_number}}</a></h2>
 {{ rr.render_report(report) }}
 <div class="span-24 last"><p><a href="#top">Return to top</a></p></div>
 {{ "<hr>"|safe if not loop.last }}
