Fix edge case in location search where search coordinates exactly match location.

--- a/src/cadorsfeed/templates/sr_loc.html
+++ b/src/cadorsfeed/templates/sr_loc.html
@@ -23,7 +23,11 @@
 		 report=report.cadors_number) }}">{{report.cadors_number}}</a></td>
     <td>{{report.timestamp_html|safe}}</td>
     <td>{{location_name}}</td>
+    {% if distance and azimuth %}
     <td>{{(distance/1000)|round(2)}}&nbsp;km&nbsp;<span title="{{azimuth | round(2)}}&deg;">{{get_direction(azimuth)}}</span></td>
+    {% else %}
+    <td>Exact match</td>
+    {% endif %}
     <td>{{report.occurrence_type}}</td>
     <td>{{report.narrative_parts[0].narrative_text | truncate(length=150)}}</td>
   </tr>
