--- a/src/cadorsfeed/templates/single_report.html
+++ b/src/cadorsfeed/templates/single_report.html
@@ -11,5 +11,5 @@
 {% block title %}Report {{report.cadors_number}}{% endblock %}
 
 {% block body %}
-{{ rr.render_report(report) }}
+{{ rr.render_report(report, True) }}
 {% endblock %}
