Copy-editing in templates.

--- a/src/cadorsfeed/templates/about.html
+++ b/src/cadorsfeed/templates/about.html
@@ -21,7 +21,7 @@
 <li><code>/search/text?q=<em>query</em>&page=1&format=atom</code></li>
 <li><code>/search/location?latitude=<em>latitude</em>&longitude=<em>longitude</em>&radius=<em>radius</em>&primary=primary&page=1&format=atom</code></li>
 <li><code>/search/aerodrome?aerodrome=<em>identifier</em>&primary=primary&page=1&format=atom</code></li>
-<li><code>/search/flight&operator=<em>operator</em>&flight=<em>flight</em>&page=1&format=atom</code> (if <code>flight</code> is omitted, all flights from that operator are retrieved)</li>
+<li><code>/search/flight?operator=<em>operator</em>&flight=<em>flight</em>&page=1&format=atom</code> (if <code>flight</code> is omitted, all flights from that operator are retrieved)</li>
 </ul>
 
 <p>Some locations associated with a report are identified as 'primary' locations; to search all locations, replace <code>primary=primary</code> with <code>primary=all</code>.</p>
