--- a/src/cadorsfeed/templates/base.html
+++ b/src/cadorsfeed/templates/base.html
@@ -50,7 +50,7 @@ WebFontConfig = {
   </section>
   <hr>
   <footer class="span-24">
-  <p><small>CADORS data is provided by Transport Canada. All reports are unverified and subject to change. <a href="/disclaimer">View full disclaimer.</a> <a href="/privacy">Privacy policy.</a> This is a <a href="http://www.kurtraschke.com/">Kurt Raschke</a> production.</small></p>
+  <p><small>CADORS data is provided by Transport Canada. All reports are unverified and subject to change.</small></p><p style="text-align: right;"><small><a href="/disclaimer">Disclaimer</a> <a href="/privacy">Privacy policy</a><br />This is a <a href="http://www.kurtraschke.com/">Kurt Raschke</a> production.</small></p>
   </footer>
 </div>
 </body>
